--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta property="og:title" content="👍2 thìa nước sắc này và chứng suy giãn tĩnh mạch sẽ khỏi vĩnh viễn!🦵">
 <meta property="og:description" content="👌phương pháp đã được chứng minh của tổ tiên chúng ta!😮">
-<meta property="og:image" content="https://i.imgur.com/TePRtIo.png">
+<meta property="og:image" content="https://i.imgur.com/krt7fLZ.png">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
