--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="👍2 thìa nước sắc này và chứng suy giãn tĩnh mạch sẽ khỏi vĩnh viễn!🦵">
-<meta property="og:description" content="👌phương pháp đã được chứng minh của tổ tiên chúng ta!😮">
-<meta property="og:image" content="https://i.imgur.com/krt7fLZ.png">
+<meta property="og:title" content="🔥Nice🔥">
+<meta property="og:description" content="💥Good💥">
+<meta property="og:image" content="https://img2.goodfon.ru/wallpaper/nbig/4/65/priroda-osen-utro-rosa-kapli.jpg">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
